==> mcgurk/Covox/esp32_i2s_covox-dss-stereo_esp-idf.cpp <==
#include "Arduino.h"
#include "driver/i2s.h"
#include "rom/rtc.h"
#define VOLUME 4 // 0 min, 8 max
#define DEBUG
#define D0 26 // white
#define D1 13 // grey
#define D2 14 // yellow
#define D3 27 // brown
#define D4  9 // blue
#define D5 10 // purple
#define D6 18 // pink
#define D7 23 // green
#define STEREO_CHANNEL_SELECT 25
#define STEREO_CHANNEL_SELECT_PULLUP 4
#define FIFOCLK 19 // fifoclock, 17 (Select Printer_) (PC->DSS)
#define FIFOFULL 22 // fifofull, 10 (ACK) (DSS->PC)
#define I2S_WS 21 // 19
#define I2S_SCK 33 // 22
#define I2S_SD 32 //21
#define SAMPLE_RATE_DSS 14000
#define SAMPLE_RATE_COVOX 96000
#define CONVERT_GPIOREG_TO_SAMPLE(r) (uint8_t)((((r>>D0)&1)<<0) | (((r>>D1)&1)<<1) | (((r>>D2)&1)<<2) | (((r>>D3)&1)<<3) | (((r>>D4)&1)<<4) | (((r>>D5)&1)<<5) | (((r>>D6)&1)<<6) | (((r>>D7)&1)<<7))
#define SIZE_OF_DSS_BUF_IN_BYTES 256*4
#define SIZE_OF_COVOX_BUF_IN_BYTES sizeof(buf)
#define fcnt ((uint8_t)(back-front)) // 0-16

void change_mode(MODE new_mode) {
  MODE old_mode = mode;
  if (new_mode == old_mode) return;
  mode = NONE;

  for (int i = 0; i < 1024; i++) buf[i] = 0;
  for (int i = 0; i < 256; i++) fifo_buf[i] = 0;
  front = 0; back = 0;
  totalSampleCounter = 0;
  buffer_full = 0;

  switch (old_mode) { //disable current mode
    case COVOX:
      vTaskDelete(task_handle_covox); //disable task
      detachInterrupt(I2S_WS); //disable i2s interrupt
      i2s_stop(I2S_NUM_0); //stop i2s   
      break;
    case DSS:
      vTaskDelete(task_handle_dss); //disable task
      detachInterrupt(I2S_WS); //disable i2s interrupt
      i2s_stop(I2S_NUM_0); //stop i2s
      break;
    case STEREO:
      vTaskDelete(task_handle_stereo); //disable task
      detachInterrupt(I2S_WS); //disable i2s interrupt
      i2s_stop(I2S_NUM_0); //stop i2s
      break;
    default:
      break;
  }

  switch (new_mode) {
    case COVOX: //dss -> covox
      // I don't like this much... if I put COVOX to core0, DSS doesn't work after COVOX without crackling. so I must use core1 to COVOX:
      xTaskCreatePinnedToCore(core0_task_covox, "core0_task_covox", 4096, NULL, 5, &task_handle_covox, 1); // create task_handle_covox (creates I2S_WS interrupt)
      i2s_set_sample_rates(I2S_NUM_0, SAMPLE_RATE_COVOX); // set sample rate
      i2s_start(I2S_NUM_0);
      break;
    case DSS: // covox -> dss
      i2s_set_sample_rates(I2S_NUM_0, SAMPLE_RATE_DSS); // set sample rate
      i2s_start(I2S_NUM_0);
      xTaskCreatePinnedToCore(core0_task_dss, "core0_task_dss", 4096, NULL, 5, &task_handle_dss, 0); // create task_handle_dss
      attachInterrupt(I2S_WS, isr_sample_dss, RISING); // handles i2s samples
      break;
    case STEREO:
      i2s_set_sample_rates(I2S_NUM_0, SAMPLE_RATE_COVOX); // set sample rate
      i2s_start(I2S_NUM_0);
      xTaskCreatePinnedToCore(core0_task_stereo, "core0_task_stereo", 4096, NULL, 5, &task_handle_stereo, 0);
      attachInterrupt(I2S_WS, isr_sample_stereo, RISING);
	  pinMode(STEREO_CHANNEL_SELECT_PULLUP, OUTPUT); digitalWrite(STEREO_CHANNEL_SELECT_PULLUP, HIGH);
      break;
    default:
      break;
  }

  mode = new_mode;
  #ifdef DEBUG
  Serial.print("New mode!: "); Serial.println(mode);
  #endif
}

void setup() {
  pinMode(D0, INPUT); //LPT: 2 (D0)
  pinMode(D1, INPUT); //     3 (D1)
  pinMode(D2, INPUT); //     4 (D2)
  pinMode(D3, INPUT); //     5 (D3)
  pinMode(D4, INPUT); //     6 (D4)
  pinMode(D5, INPUT); //     7 (D5)
  pinMode(D6, INPUT); //     8 (D6)
  pinMode(D7, INPUT); //     9 (D7)
                      //     GND

  pinMode(FIFOCLK, INPUT); // fifoclock, 17 (Select Printer_) (PC->DSS)
  pinMode(FIFOFULL, OUTPUT); digitalWrite(FIFOFULL, LOW); // fifofull, 10 (ACK) (DSS->PC)
  pinMode(STEREO_CHANNEL_SELECT, INPUT_PULLUP); // LPT pin 1 (_strobe)
  //pinMode(EXTRA_GND, OUTPUT); digitalWrite(EXTRA_GND, LOW); // just another GND

  #ifdef DEBUG
  Serial.begin(115200);
  while(Serial.available());
  Serial.println(); Serial.print("--- (compilation date: "); Serial.print(__DATE__); Serial.print(" "); Serial.print(__TIME__); Serial.println(") ---");
  #endif

  i2s_driver_install(I2S_NUM_0, &i2s_config, 0, NULL);
  i2s_set_pin(I2S_NUM_0, &pin_config);

  // detect stereo
  attachInterrupt(STEREO_CHANNEL_SELECT, isr_channelselect, CHANGE);
  delay(200);
  #ifdef DEBUG
  Serial.println(channelsignalcount);
  #endif
  
  /*uint32_t d = 0;
  for (uint32_t i = 0; i < 1000000; i++) if (REG_READ(GPIO_IN_REG) & (1<<STEREO_CHANNEL_SELECT)) d++;
  Serial.println(d);
  delay(1000);*/
  //if (rtc_get_reset_reason(0) == 5) { // STEREO COVOX
  //if (d) { // STEREO COVOX
  if (channelsignalcount > 2) {
    //detachInterrupt(STEREO_CHANNEL_SELECT);
    change_mode(STEREO);
  } else {
    change_mode(COVOX);
  }
  //change_mode(COVOX);
}
