==> mcgurk/Covox/esp32_i2s_covox-dss-stereo.c <==
#include <stdio.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "driver/i2s.h"
#include "driver/gpio.h"
#include "esp_system.h"
#include "esp_log.h"
#include "soc/rtc.h"
#include "hal/gpio_hal.h"
#define VOLUME 4 // 0 min, 8 max
#define DEBUG
#define D0 13 // white
#define D1 14 // grey
#define D2 27 // yellow
#define D3 26 // brown
#define D4  9 // blue
#define D5 10 // purple
#define D6 18 // pink
#define D7 23 // green
#define I2S_BCK_IO      (GPIO_NUM_33) //4)
#define I2S_WS_IO       (GPIO_NUM_5)
#define I2S_DO_IO       (GPIO_NUM_32) //18)
#define FIFOCLK 19 // fifoclock, 17 (Select Printer_) (PC->DSS)
#define FIFOFULL 22 // fifofull, 10 (ACK) (DSS->PC)
#define STEREO_CHANNEL_SELECT 4
#define STEREO_CHANNEL_SELECT_PULLUP 25
#define GPIO_COVOX 2
#define GPIO_DSS 12
#define GPIO_STEREO 15
#define BOOL_COVOX (REG_READ(GPIO_IN_REG)&(1 << GPIO_COVOX))
#define BOOL_DSS (REG_READ(GPIO_IN_REG)&(1 << GPIO_DSS))
#define BOOL_STEREO (REG_READ(GPIO_IN_REG)&(1 << GPIO_STEREO))
#define SIZE_OF_DSS_BUF_IN_BYTES 256*4
#define CONVERT_GPIOREG_TO_SAMPLE(r) (uint8_t)((((r>>D0)&1)<<0) | (((r>>D1)&1)<<1) | (((r>>D2)&1)<<2) | (((r>>D3)&1)<<3) | (((r>>D4)&1)<<4) | (((r>>D5)&1)<<5) | (((r>>D6)&1)<<6) | (((r>>D7)&1)<<7))
#define SAMPLE_RATE_DSS (14000)
#define SAMPLE_RATE_COVOX (96000)
#define I2S_NUM         (0)
#define I2S_DI_IO       (-1)
#define fcnt ((uint8_t)(back-front)) // 0-16

void change_mode(uint32_t new_mode) {
	uint32_t old_mode = mode;
	if (new_mode == old_mode) return;
	mode = NONE;

	switch (old_mode) { //disable current mode
	case COVOX:
		gpio_set_level(GPIO_COVOX, 0);
		i2s_driver_uninstall(I2S_NUM_0);
		break;
	case DSS:
		gpio_set_level(GPIO_DSS, 0);
		gpio_isr_handler_remove(I2S_WS_IO);
		i2s_driver_uninstall(I2S_NUM_0);
		break;
	case STEREO:
		gpio_set_level(STEREO_CHANNEL_SELECT_PULLUP, 0);
		gpio_set_level(GPIO_STEREO, 0);
		gpio_isr_handler_remove(I2S_WS_IO);
		i2s_driver_uninstall(I2S_NUM_0);
		break;
	default:
		break;
	}

	// clean up
	for (int i = 0; i < sizeof(buf)/sizeof(uint32_t); i++) buf[i] = 0;
	for (int i = 0; i < sizeof(fifo_buf)/sizeof(uint32_t); i++) fifo_buf[i] = 0;
	front = 0; back = 0;
	totalSampleCounter = 0;
	buffer_full = 0;

	switch (new_mode) {
	case COVOX:
		i2s_driver_install(I2S_NUM, &i2s_config_covox, 0, NULL);
		i2s_set_pin(I2S_NUM, &pin_config);
		gpio_set_level(GPIO_COVOX, 1);
		break;
	case DSS:
		i2s_driver_install(I2S_NUM, &i2s_config_dss, 0, NULL);
		i2s_set_pin(I2S_NUM, &pin_config);
		gpio_isr_handler_add(I2S_WS_IO, isr_dssfifo, NULL);
		gpio_set_level(GPIO_DSS, 1);
		break;
	case STEREO:
		gpio_set_level(STEREO_CHANNEL_SELECT_PULLUP, 1);
		i2s_driver_install(I2S_NUM, &i2s_config_covox, 0, NULL);
		i2s_set_pin(I2S_NUM, &pin_config);
		//pinMode(STEREO_CHANNEL_SELECT_PULLUP, OUTPUT); digitalWrite(STEREO_CHANNEL_SELECT_PULLUP, HIGH);
		gpio_isr_handler_add(I2S_WS_IO, isr_sample_stereo, NULL);
		gpio_set_level(GPIO_STEREO, 1);
		break;
	default:
		break;
	}

	gpio_hal_context_t gpiohal; gpiohal.dev = GPIO_LL_GET_HW(GPIO_PORT_0);
	gpio_hal_input_enable(&gpiohal, I2S_WS_IO);
	mode = new_mode;
	printf("New mode!: %i\n", mode);
}

void app_main(void)
{

	PIN_TO_INPUT(D0); PIN_TO_INPUT(D1); PIN_TO_INPUT(D2); PIN_TO_INPUT(D3); PIN_TO_INPUT(D4); PIN_TO_INPUT(D5); PIN_TO_INPUT(D6); PIN_TO_INPUT(D7);
	PIN_TO_INPUT(FIFOCLK); PIN_TO_OUTPUT(FIFOFULL); gpio_set_level(FIFOFULL, 0);
	PIN_TO_INPUT(STEREO_CHANNEL_SELECT); PIN_TO_OUTPUT(STEREO_CHANNEL_SELECT_PULLUP); //gpio_set_level(STEREO_CHANNEL_SELECT_PULLUP, 1);
	PIN_TO_OUTPUT(GPIO_COVOX); gpio_set_level(GPIO_COVOX, 0);
	PIN_TO_OUTPUT(GPIO_DSS); gpio_set_level(GPIO_DSS, 0);
	PIN_TO_OUTPUT(GPIO_STEREO); gpio_set_level(GPIO_STEREO, 0);

	printf("setup running on core: %i\n", xPortGetCoreID());
	xTaskCreatePinnedToCore(core1_task, "Core1_Task", 4096, NULL,10, &myTaskHandle, 1);

	//ESP_LOGI(TAG, "set clock");
	//i2s_set_clk(I2S_NUM, SAMPLE_RATE, 16, 2);
	//ESP_LOGI(TAG, "write data");
	//for (int i = 0; i< 100; i++) fifo_buf[i]=i;

	gpio_install_isr_service(0);
	gpio_set_intr_type(I2S_WS_IO, GPIO_INTR_POSEDGE);
	gpio_set_intr_type(FIFOCLK, GPIO_INTR_POSEDGE);
	gpio_set_intr_type(STEREO_CHANNEL_SELECT, GPIO_INTR_POSEDGE);
	gpio_isr_handler_add(FIFOCLK, isr_dss_detect, NULL);
	gpio_isr_handler_add(STEREO_CHANNEL_SELECT, isr_stereo_detect, NULL);
	gpio_hal_context_t gpiohal; gpiohal.dev = GPIO_LL_GET_HW(GPIO_PORT_0);
	//gpio_hal_input_enable(&gpiohal, I2S_WS_IO);
	gpio_hal_input_enable(&gpiohal, GPIO_COVOX);
	gpio_hal_input_enable(&gpiohal, GPIO_DSS);
	gpio_hal_input_enable(&gpiohal, GPIO_STEREO);

	ESP_LOGI(TAG, "log test");

	change_mode(COVOX);
	//i2s_set_clk(I2S_NUM, SAMPLE_RATE_DSS, 16, 2);
	//mode = DSS;
	//i2s_driver_install(I2S_NUM, &i2s_config_covox, 0, NULL);
	//i2s_set_pin(I2S_NUM, &pin_config);
	//change_mode(COVOX);
	//vTaskDelay(1000 / portTICK_RATE_MS);

	while (1) {

		size_t i2s_bytes_write;
		if ((mode == DSS) && buffer_full) {
			//if (buffer_full) {
			if (buffer_full == 1) i2s_write(I2S_NUM_0, &buf[0], SIZE_OF_DSS_BUF_IN_BYTES/2, &i2s_bytes_write, portMAX_DELAY);
			if (buffer_full == 2) i2s_write(I2S_NUM_0, &buf[128], SIZE_OF_DSS_BUF_IN_BYTES/2, &i2s_bytes_write, portMAX_DELAY);
			buffer_full = 0;
			totalSamplesPlayed += i2s_bytes_write/4;
		}
		if ((mode != DSS) && buffer_full) {
			if (buffer_full == 1) i2s_write(I2S_NUM_0, &buf[0], 1024*4, &i2s_bytes_write, portMAX_DELAY);
			if (buffer_full == 2) i2s_write(I2S_NUM_0, &buf[1024], 1024*4, &i2s_bytes_write, portMAX_DELAY);
			buffer_full = 0;
			totalSamplesPlayed += i2s_bytes_write/4;
		}

		// debug:
		static uint32_t oldtime = 0, newtime = 0;
		//newtime = xthal_get_ccount();
		newtime = esp_timer_get_time();
		if ( (newtime - oldtime) < 2000000000L ) {
			rtc_cpu_freq_config_t conf;
			rtc_clk_cpu_freq_get_config(&conf);
			//printf("main core: %i, cpu speed: %u, cycles: %u, ",xPortGetCoreID(), conf.freq_mhz, xthal_get_ccount());
			//printf("main core: %i, cpu speed: %u, ",xPortGetCoreID(), conf.freq_mhz);
			printf("cpu speed: %u, ", conf.freq_mhz);
			//printf("debug: %u, ", debug);
			//printf("BOOL_COVOX: %u, ", BOOL_COVOX);
			//printf("BOOL_DSS: %u, ", BOOL_DSS);
			printf("FIFOCLK: %u, ", (REG_READ(GPIO_IN_REG)>>FIFOCLK)&1);
			printf("esp_timer_get_time(): %u, ", newtime);
			printf("last_stereo: %u, ", newtime-last_stereo_signal);
			printf("last_dss: %u, ", newtime-last_dss_signal);
			//printf("stereo_detect_count: %u, ", stereo_detect_count);
			printf("mode: %u, ", mode);
			//printf("totalTaskCounter: %u, ", totalTaskCounter);
			//printf("totalSampleCounter: %u, ", totalSampleCounter);
			//printf("totalSamplesPlayed: %u, ", totalSamplesPlayed);
			//printf("difference: %u\n", totalSampleCounter-totalSamplesPlayed);
			printf("\n");
			oldtime += 1000000; //ms_to_cycles(1000);

		}

		if (mode_change_flag) {
			change_mode(mode_change_flag);
			mode_change_flag = NONE;
		}
		if (mode == STEREO) {
			uint32_t last = last_stereo_signal;
			uint32_t now = esp_timer_get_time();
			if ((now - last) > 1000000L) {
				change_mode(COVOX);
				//esp_restart();
			}
		}
		if (mode == DSS) {
			uint32_t last = last_dss_signal;
			uint32_t now = esp_timer_get_time();
			if ((now - last) > 2*1000000L)
				change_mode(COVOX);
		}

		vTaskDelay(5);
		//vTaskDelay(1000/portTICK_RATE_MS);

	}

}
